@@ -64,72 +64,73 @@ is_deeply( \@output, \@example, 'Write JSON' );
 $output{'non-existant-option'} = undef;
 Gscan2pdf::Config::add_defaults( \%output );
 %example = (
-    version                       => '1.3.3',
-    'SANE version'                => undef,
-    'libsane-perl version'        => undef,
-    window_width                  => 800,
-    window_height                 => 600,
-    window_maximize               => TRUE,
-    window_x                      => undef,
-    window_y                      => undef,
-    'thumb panel'                 => 100,
-    scan_window_width             => undef,
-    scan_window_height            => undef,
-    TMPDIR                        => undef,
-    'Page range'                  => 'all',
-    selection                     => undef,
-    cwd                           => undef,
-    title                         => undef,
-    'title-suggestions'           => undef,
-    author                        => undef,
-    'author-suggestions'          => undef,
-    subject                       => undef,
-    'subject-suggestions'         => undef,
-    keywords                      => undef,
-    'keywords-suggestions'        => undef,
-    device                        => undef,
-    'device blacklist'            => undef,
-    'allow-batch-flatbed'         => FALSE,
-    'adf-defaults-scan-all-pages' => TRUE,
-    'cycle sane handle'           => FALSE,
-    'downsample'                  => FALSE,
-    'downsample dpi'              => 150,
-    'threshold-before-ocr'        => FALSE,
-    'threshold tool'              => 80,
-    'contrast tool'               => 65,
-    'brightness tool'             => 65,
-    'unsharp radius'              => 0,
-    'unsharp sigma'               => 1,
-    'unsharp amount'              => 1,
-    'unsharp threshold'           => 0.05,
-    'cache options'               => TRUE,
-    cache                         => undef,
-    'restore window'              => TRUE,
-    'date offset'                 => 0,
-    set_timestamp                 => TRUE,
-    'pdf compression'             => 'auto',
-    'tiff compression'            => undef,
-    'pdf font'                    => undef,
-    'quality'                     => 75,
-    'image type'                  => undef,
-    'unpaper on scan'             => FALSE,
-    'unpaper options'             => undef,
-    'OCR on scan'                 => TRUE,
-    'frontend'                    => 'libsane-perl',
-    'rotate facing'               => 0,
-    'rotate reverse'              => 0,
-    'default filename'            => '%a %y-%m-%d',
-    'scan prefix'                 => $EMPTY,
-    'Blank threshold'             => 0.005,
-    'Dark threshold'              => 0.12,
-    'ocr engine'                  => 'tesseract',
-    'ocr language'                => undef,
-    'OCR output'                  => 'replace',
-    'auto-open-scan-dialog'       => TRUE,
-    'available-tmp-warning'       => 10,
-    close_dialog_on_save          => TRUE,
-    'view files toggle'           => TRUE,
-    'Paper'                       => {
+    version                             => '1.3.3',
+    'SANE version'                      => undef,
+    'libsane-perl version'              => undef,
+    window_width                        => 800,
+    window_height                       => 600,
+    window_maximize                     => TRUE,
+    window_x                            => undef,
+    window_y                            => undef,
+    'thumb panel'                       => 100,
+    scan_window_width                   => undef,
+    scan_window_height                  => undef,
+    TMPDIR                              => undef,
+    'Page range'                        => 'all',
+    selection                           => undef,
+    cwd                                 => undef,
+    title                               => undef,
+    'title-suggestions'                 => undef,
+    author                              => undef,
+    'author-suggestions'                => undef,
+    subject                             => undef,
+    'subject-suggestions'               => undef,
+    keywords                            => undef,
+    'keywords-suggestions'              => undef,
+    device                              => undef,
+    'device blacklist'                  => undef,
+    'allow-batch-flatbed'               => FALSE,
+    'adf-defaults-scan-all-pages'       => TRUE,
+    'cycle sane handle'                 => FALSE,
+    'downsample'                        => FALSE,
+    'downsample dpi'                    => 150,
+    'threshold-before-ocr'              => FALSE,
+    'threshold tool'                    => 80,
+    'contrast tool'                     => 65,
+    'brightness tool'                   => 65,
+    'unsharp radius'                    => 0,
+    'unsharp sigma'                     => 1,
+    'unsharp amount'                    => 1,
+    'unsharp threshold'                 => 0.05,
+    'cache options'                     => TRUE,
+    cache                               => undef,
+    'restore window'                    => TRUE,
+    'date offset'                       => 0,
+    set_timestamp                       => TRUE,
+    'pdf compression'                   => 'auto',
+    'tiff compression'                  => undef,
+    'pdf font'                          => undef,
+    'quality'                           => 75,
+    'image type'                        => undef,
+    'unpaper on scan'                   => FALSE,
+    'unpaper options'                   => undef,
+    'OCR on scan'                       => TRUE,
+    'frontend'                          => 'libsane-perl',
+    'rotate facing'                     => 0,
+    'rotate reverse'                    => 0,
+    'default filename'                  => '%a %y-%m-%d',
+    'convert whitespace to underscores' => FALSE,
+    'scan prefix'                       => $EMPTY,
+    'Blank threshold'                   => 0.005,
+    'Dark threshold'                    => 0.12,
+    'ocr engine'                        => 'tesseract',
+    'ocr language'                      => undef,
+    'OCR output'                        => 'replace',
+    'auto-open-scan-dialog'             => TRUE,
+    'available-tmp-warning'             => 10,
+    close_dialog_on_save                => TRUE,
+    'view files toggle'                 => TRUE,
+    'Paper'                             => {
         'A4' => {
             x => 210,
             y => 297,
