@@ -9,6 +9,8 @@
 * + support for unpaper --no-mask-center option.
   Thanks to Peter Marschall for the patch
 * + contrast + brightness tool. Thanks to Peter Marschall for the patch
+* + option to convert filename whitespace to underscores.
+  Thanks to Peter Marschall for the patch
 
 
 1.7.3 (12.03.2017):
